# pywatershed

./: .flake8  .gitignore  .mf6_ci_ref_remote  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  DEVELOPER.md  DISCLAIMER.md  HISTORY.md  MANIFEST.in  README.md  _config.yml  cliff.toml  code.json  environment.yml  environment_w_jupyter.yml  pwsmf6nb.yml  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  version.txt
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE.md
.github/scripts/: pull_request_prepare.py  symlink_gfortran_mac.sh  update_version.py
.github/workflows/: ci.yaml  ci_examples.yaml  examples.yaml  release.yaml
_includes/: v1_0_0_compare_channel.html
_posts/: 2023-11-14-v1-0-0-overview.md  2023-12-18-v1-0-0-overview.md  2023-12-18-v1-0-0-prms-atmosphere.md  2023-12-18-v1-0-0-prms-canopy.md  2023-12-18-v1-0-0-prms-channel.md  2023-12-18-v1-0-0-prms-runoff.md  2023-12-18-v1-0-0-prms-snow.md  2023-12-18-v1-0-0-prms-soilzone.md  2024-11-14-v2-0-0-overview.md  2024-12-16-v2-0-0-overview.md
_sass/: jekyll-theme-minimal.scss
asv/v1-0-0/: index.json  info.json  regressions.json  regressions.xml
asv_benchmarks/: README.md  asv.conf.json  pws_refs_for_asv.txt  run_benchmarks_wo_asv.py
asv_benchmarks/benchmarks/: __init__.py  control.py  import.py  parameters.py  prms.py
autotest/: README.md  ci_local.sh  conftest.py  generate_test_data.py  pytest.ini  run_swb_test.cmd  test_atm.py  test_atmosphere.py  test_base.py  test_boundary_layer.py  test_budget.py  test_canopy.py  test_canopy_runoff.py  test_cbh_read.py  test_cbh_to_netcdf.py  test_channel.py  test_control.py  test_control_read.py  test_data_model.py  test_dis_hru.py  test_et.py  test_et_can_runoff.py  test_et_can_runoff_model.py  test_et_canopy.py  test_groundwater.py  test_groundwater_better.py  test_meta.py  test_mf6_inputs.py  test_mmr_to_mf6_dfw.py  test_mmr_to_mf6_mmr.py  test_model.py  test_model_above_snow.py  test_model_below_snow.py  test_netcdf_output.py  test_netcdf_read.py  test_netcdf_subset.py  test_nhm_self_drive.py  test_obsin_flow_node.py  test_param_separate.py  test_parameter_read.py  (+39 more)
autotest_exs/: test_notebooks.py
ci/requirements/: doc.txt  doc.txt~  doc.yml  environment.txt  environment.yml  pwsmf6nb.yml  pynhmf6nb.yml
dist_models/acf/: nogui.bat
dist_models/merced/: README.txt  nogui_XYZ.bat
doc/: Makefile  api.rst  conf.py  genindex.rst  index.rst  whats-new.rst
doc/api/: adapter.rst  atmosphere.rst  base.rst  control.rst  flow_graph.rst  hydrology.rst  meta.rst  model.rst  parameters.rst  preprocess.rst  pynhm.ControlVariables.rst  pynhm.PrmsParameters.rst  utils.rst
evaluation/common/: metrics.py  process_plot.py
evaluation/performance/: compile_performance.ipynb  nhm_pynhm_vs_prms_performance.ipynb  plot_4_performance_domains.ipynb  prms_5.2.1_performance.ipynb  pynhm_nhm_performance.ipynb
evaluation/prms/: mmr_to_mf6.ipynb  mmr_to_nmf6.ipynb  panel_errors.ipynb  panel_errors_helpers.py  prms_snow17.ipynb
examples/: 00_processes.ipynb  00_python_virtual_env.ipynb  01_automated_testing.ipynb  01_multi-process_models.ipynb  01_process_models.ipynb  02_prms_legacy_models.ipynb  02_process_models.ipynb  03_compare_pws_prms.ipynb  03_swb_model.ipynb  04_preprocess_atm.ipynb  05_parameter_ensemble.ipynb  06_flow_graph_starfit.ipynb  07_cascading_flow.ipynb  07_mmr_to_mf6_chf_dfw.ipynb  README.md  compare_pws_prms.ipynb  examples_env.txt  examples_env.yml  mmr_to_mf6_dfw.ipynb  model_custom_output_aug_15_2023.py  model_graph.ipynb  model_loop_custom_output.ipynb  param_edits.ipynb  preprocess_cbh_adj.ipynb  prms_parameter_discretization_separation.ipynb  process_plot.py  runoff_errors.ipynb  snow_errors.ipynb
examples/developer/: 00_python_virtual_env.ipynb  02_process_models.ipynb
examples/helpers/: gis_files.py
examples/sagehen/: environment.yaml  pynhm.control  sagehen-api-pynhm.ipynb  sagehen-postprocess-graphs.ipynb  sagehen-postprocess-maps.ipynb  sagehen_params.pkl
markstrom/: canopy_interception.ipynb  ddsolrad.ipynb  solar_table.ipynb  transpiration.ipynb
preprocess/: __init__.py  cbh.py
prms5.2.0_linux/: README.txt
prms5.2.0_windows/msvs/: mmf_5.vcxproj  prms_5.sln  prms_5.vfproj
prms5.2.0_windows/src/: Makefile
prms5.2.1/: Makefile  makelist
prms5.2.1/mmf/: control_array.c  create_vstats.c  get_elem_add.c  getdimname.c  globals.h  julday.c  mms.h  print_model_info.c  read_params.c  read_vars.c  setup_cont.c  sort_params.c  sort_vars.c  umalloc_etc.c  var_addr.c  write_vstats.c
prms5.2.1/prms/: cascade.f90  ccsolrad.f90  climateflow.f90  ddsolrad.f90  dynamic_param_read.f90  ide_dist.f  intcp.f90  map_results.f90  muskingum_lake.f90  nhru_summary.f90  nsegment_summary.f90  nsub_summary.f90  obs.f90  potet_pan.f90  potet_pm.f90  potet_pm_sta.f90  potet_pt.f90  precip_1sta_laps.f90  precip_map.f90  prms_constants.f90  prms_summary.f90  routing.f90  srunoff.f90  stream_temp.f90  temp_1sta_laps.f90  temp_dist2.f90  temp_map.f90  transp_frost.f90  (+3 more)
prms5.3.0/: README.md
prms5.3.0/prms/: basin.f90  basin_sum.f90  basin_summary.f90  c_mmf_utils.f90  c_read_control_file.f90  c_read_data_file.f90  call_modules.f90  cascade.f90  ccsolrad.f90  convert_params.f90  frost_date.f90  glacr_melt.f90  gwflow.f90  intcp.f90  map_results.f90  meson.build  muskingum.f90  muskingum_lake.f90  nsub_summary.f90  obs.f90  potet_hs.f90  potet_pt.f90  prms_module.f90  prms_summary.f90  routing.f90  sm_mmf_utils.f90  sm_prms_time.f90  sm_read_control_file.f90  sm_read_data_file.f90  soilzone_ag.f90  soltab.f90  srunoff.f90  statvar_out.f90  stream_temp.f90  strmflow_in_out.f90  transp_frost.f90  transp_tindex.f90  write_climate_hru.f90  xyz_dist.f
pynhm/: MANIFEST.in  __init__.py  atmosphericForcings.py  constants.py  parameters.py  prms5util.py  prms5util_cbh.py  prmsCanopy.py  prmsSurfaceRunoff.py  pynhm.py  storageUnit.py  utils.py  variableClass.py  version.py
python/: CBH_to_HRUs_box01.ipynb  box01.ipynb
pywatershed/: __init__.py  constants.py  version.py
reference/: README.md
test_data/: .gitignore  README.md
test_models/: README.txt
(+859 files in other folders)
