[build-system]
# Minimum requirements for the build system to execute
requires = [
    "numpy",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target_version = ["py39"]

[tool.flynt]
line-length = 79
verbose = true

[tool.isort]
profile = "black"
src_paths = ["pynhm", "autotest", "test_data"]
line_length = 79

[tool.setuptools_scm]
fallback_version = "999"