[build-system]
requires = [
    "setuptools >=61",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "pywatershed"
description = "pywatershed is a Python package for hydrologic modeling"
authors = [
    {name = "USGS Enterprise Capacity Team", email = "modflow@usgs.gov"},
]
maintainers = [
    { name = "James L. McCreight", email = "jmccreight@usgs.gov" },
    { name = "Joseph D. Hughes", email = "jdhughes@usgs.gov" },
]
keywords = ["hydrology", "PRMS"]
license = { text = "CC0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.9,<3.11"
dependencies = [
    "numpy >=1.15.0",
    "matplotlib >=1.4.0",
    "epiweeks",
    "netCDF4",
    "networkx",
    "numpy",
    "numba",
    "pandas >= 1.4.0",
    "pint",
    "pyyaml",
    "tqdm",
    "xarray >= 2023.5.0",
    "xmltodict",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
lint = [
    "cffconvert",
    "black",
    "click",
    "isort",
    "flake8",
    "pylint",
    "flynt",
    "pre-commit",
]
test = [
    "pywatershed[lint]",
    "coverage",
    "flaky",
    "flopy",
    "filelock",
    "modflow-devtools==1.3.1",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-order",
    "pytest-xdist",
]
optional = [
    "pydot",
    "geos",
    "cartopy",
    "geopandas",
    "hvplot",
    "shapely <2.0.0",
    "ipython",
    "jupyter",
    "jupyterlab",
]
doc = [
    "ipython",
    "jinja2<3.1",
    "sphinx",
    "sphinx-book-theme>=0.3.3",
    "sphinx-autodoc-typehints",
    "sphinx-autosummary-accessors",
    "sphinx-copybutton"
]
all = [
    "pywatershed[lint, test, optional, doc]",
]

[project.urls]
Documentation = "https://pywatershed.readthedocs.io"
"Bug Tracker" = "https://github.com/EC-USGS/pywatershed/issues"
"Source Code" = "https://github.com/EC-USGS/pywatershed"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "pywatershed.version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
include = ["pywatershed", "pywatershed.*"]

[tool.setuptools.package-data]
"pywatershed.static.metadata" = ["*.yaml"]
"pywatershed.data.drb_2yr" = ["*"]

[tool.black]
line-length = 79
target_version = ["py39"]

[tool.flynt]
line-length = 79
verbose = true

[tool.isort]
profile = "black"
src_paths = ["pywatershed", "autotest", "test_data"]
line_length = 79
