[metadata]
name = pynhm
version = attr: pynhm.version.__version__
description = pynhm is a Python implementation of PRMS
long_description = pynhm is a Python package that is a python implementation of PRMS used to run the USGS National Hydrologic Model
long_description_content_type = text/markdown
author = USGS Enterprise Capacity Team
author_email = modflow@usgs.gov
maintainer = James McCreight
maintainer_email = jmccreight@usgs.gov
license = CC0
license_files = LICENSE, LICENSE.md
platform = Mac OS-X, Linux
keywords = PRMS, hydrology
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Hydrology
url = https://github.com/EC-USGS/prmsNHMpy
download_url = https://pypi.org/project/pynhm
project_urls =
    Bug Tracker = https://github.com/EC-USGS/prmsNHMpy/issues
    Source Code = https://github.com/EC-USGS/prmsNHMpy

[options]
include_package_data = True  # includes files listed in MANIFEST.in
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    numba
    pandas
    pyyaml
    netCDF4
    networkx


[options.package_data]
pynhm =
    static/metadata/*.yaml

[sdist]
formats = zip

[flake8]
exclude =
    .git
    __pycache__
    build
    dist
    examples
    # autotest
ignore =
    # https://flake8.pycqa.org/en/latest/user/error-codes.html
    # F401 # 'module' imported but unused
    # https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
    E121 # continuation line under-indented for hanging indent
    E122 # continuation line missing indentation or outdented
    E126 # continuation line over-indented for hanging indent
    E127 # continuation line over-indented for visual indent
    E128 # continuation line under-indented for visual indent
    E203 # whitespace before
    E221 # multiple spaces before operator
    E222 # multiple spaces after operator
    E226 # missing whitespace around arithmetic operator
    # E231 # missing whitespace after ','
    # E241 # multiple spaces after ','
    # E402 # module level import not at top of file
    # E501 # line too long (> 79 characters)
    # E502 # backslash is redundant between brackets
    # E722 # do not use bare 'except'
    E741 # ambiguous variable name
    # W291 # trailing whitespace
    # W292 # no newline at end of file
    #     W293 # blank line contains whitespace
    W391 # blank line at end of file
    W503 # line break before binary operator
    W504 # line break after binary operator
statistics = True
