prms_sources = files(
    'c_utils_prms.f90',
    'prms_constants.f90',
    'c_read_parameter_file.f90',
    'prms_module.f90',
    'setup_param.f90',
    'c_prms_time.f90',
    'sm_mmf_utils.f90',
    'convert_params.f90',
    'c_mmf_utils.f90',
    'c_read_control_file.f90',
    'c_read_data_file.f90',
    'call_modules.f90',
    'sm_read_parameter_file.f90',
    'obs.f90',
    'basin.f90',
    'water_use_read.f90',
    'nhru_summary.f90',
    'basin_summary.f90',
    'sm_prms_time.f90',
    'nsegment_summary.f90',
    'cascade.f90',
    'nsub_summary.f90',
    'map_results.f90',
    'soltab.f90',
    'sm_utils_prms.f90',
    'climateflow.f90',
    'potet_hamon.f90',
    'temp_1sta_laps.f90',
    'ide_dist.f',
    'potet_hs.f90',
    'temp_dist2.f90',
    'intcp.f90',
    'potet_jh.f90',
    'temp_map.f90',
    'xyz_dist.f',
    'potet_pan.f90',
    'transp_frost.f90',
    'transp_tindex.f90',
    'climate_hru.f90',
    'srunoff.f90',
    'potet_pm_sta.f90',
    'statvar_out.f90',
    'potet_pt.f90',
    'write_climate_hru.f90',
    'precip_1sta_laps.f90',
    'ddsolrad.f90',
    'precip_dist2.f90',
    'frost_date.f90',
    'sm_read_data_file.f90',
    'precip_map.f90',
    'gwflow.f90',
    'strmflow.f90',
    'ccsolrad.f90',
    'snowcomp.f90',
    'soilzone.f90',
    'prms_summary.f90',
    'soilzone_ag.f90',
    'potet_pm.f90',
    'glacr_melt.f90',
    'dynamic_param_read.f90',
    'routing.f90',
    'muskingum.f90',
    'stream_temp.f90',
    'muskingum_lake.f90',
    'sm_read_control_file.f90',
    'subbasin.f90',
    'basin_sum.f90',
    'water_balance.f90',
    'strmflow_in_out.f90',
    'prms_fortran.f90'
)

executable('prms', [prms_sources], install: true)
